--- a/.github/workflows/call-release-tests.yml
+++ b/.github/workflows/call-release-tests.yml
@@ -27,10 +27,10 @@ jobs:
   #     sh-runner: false
   #     skip-device-perf: false
 
-  demo-test:
-    uses: tenstorrent/tt-forge/.github/workflows/demo-tests.yml@main
-    secrets: inherit
-    with:
-      docker-image: ${{ inputs.release_docker_image }}
-      ref: main
-      project-filter: tt-xla
+  # demo-test:
+  #   uses: tenstorrent/tt-forge/.github/workflows/demo-tests.yml@main
+  #   secrets: inherit
+  #   with:
+  #     docker-image: ${{ inputs.release_docker_image }}
+  #     ref: main
+  #     project-filter: tt-xla
