--- a/.github/workflows/manual-test-single.yml
+++ b/.github/workflows/manual-test-single.yml
@@ -1,40 +1,111 @@
 name: Run Test Single
 
-
 on:
   workflow_dispatch:
+    inputs:
+      dir:
+        description: 'Path passed to pytest'
+        required: true
+        type: string
+      mark:
+        description: 'Mark passed to pytest (-m)'
+        required: false
+        type: string
+      contains:
+        description: 'Execute test that contains the specified string (-k)'
+        required: false
+        type: string
+      args:
+        description: 'Additional arguments passed to pytest'
+        required: false
+        type: string
+      runs_on:
+        description: 'Choose runners for running test'
+        required: true
+        type: choice
+        options:
+          - 'n150'
+          - 'n300'
+          - 'p150'
+          - 'n300-llmbox'
+          - 'llmbox-1'
+          - 'llmbox-2'
+      shared_runners:
+        description: 'Run test on the CIv2 runner'
+        required: false
+        default: false
+        type: boolean
+      parallel_groups:
+        description: 'Number of parallel runners for test execution'
+        required: true
+        default: '1'
+        type: choice
+        options:
+          - '1'
+          - '2'
+          - '3'
+          - '4'
+          - '5'
+          - '8'
+          - '10'
+      mlir_override:
+          description: 'Git SHA of commit in tenstorrent/tt-mlir'
+          required: false
+          type: string
 
 permissions:
-  actions: write
-  id-token: write
   packages: write
   checks: write
+
+run-name: 'Test ( Dir: ${{ inputs.dir }} - Mark: ${{ inputs.mark }} - Run-on: ${{ inputs.runs_on }} - Shared runner: ${{ inputs.shared_runners }} )'
 
 jobs:
   build-image:
     uses: ./.github/workflows/call-build-docker.yml
     secrets: inherit
+    with:
+      mlir_override: ${{ inputs.mlir_override }}
 
   build-ttxla:
-    uses: ./.github/workflows/call-build.yml
-    name: "Build tt-xla"
-    secrets: inherit
     needs: build-image
+    uses: ./.github/workflows/call-build.yml
+    secrets: inherit
     with:
       docker_image: ${{ needs.build-image.outputs.docker-image }}
+      mlir_override: ${{ inputs.mlir_override }}
 
-  build-release-docker:
-    uses: ./.github/workflows/call-build-release-docker.yml
-    needs: [ build-ttxla ]
+  generate-test-config:
+    needs: build-ttxla
+    runs-on: ubuntu-latest
+    outputs:
+      test-config: ${{ steps.generate.outputs.test-config }}
+    steps:
+      - id: generate
+        run: |
+          TEST_CONFIG=$(jq -n \
+            --arg runs_on '${{ inputs.runs_on }}' \
+            --arg dir '${{ inputs.dir }}' \
+            --arg mark '${{ inputs.mark }}' \
+            --arg shared_runners '${{ inputs.shared_runners }}' \
+            --arg args '${{ inputs.args }}' \
+            --arg contains '${{ inputs.contains }}' \
+            --argjson parallel_groups '${{ inputs.parallel_groups }}' \
+            '[{"runs-on": $runs_on,"name": "Test","dir": $dir,"test-mark": $mark,"shared-runners": $shared_runners,"args": $args,"contains": $contains,"parallel-groups": $parallel_groups}]')
+
+          echo $TEST_CONFIG
+
+          echo "test-config=$(echo "$TEST_CONFIG" | jq -c)" >> $GITHUB_OUTPUT
+
+  test:
+    if: always() && !cancelled() && inputs.preset != 'tt_forge_models'
+    uses: ./.github/workflows/call-test.yml
+    needs: [ build-image, build-ttxla, generate-test-config ]
     secrets: inherit
     with:
-      wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+      test_suite: 'Custom'
+      test_suite_custom: ${{ needs.generate-test-config.outputs.test-config }}
+      docker_image: ${{ needs.build-image.outputs.docker-image-base }}
+      artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
       wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
       wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
-
-  release-tests:
-    uses: ./.github/workflows/call-release-tests.yml
-    needs: [ build-release-docker ]
-    secrets: inherit
-    with:
-      release_docker_image: ${{ needs.build-release-docker.outputs.docker_image }}
+      alchemist_artifact_name: ${{ needs.build-ttxla.outputs.alchemist_artifact_name }}
