--- a/tests/runner/test_config/torch_llm/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch_llm/test_config_inference_single_device.yaml
@@ -180,7 +180,7 @@ test_config:
   # Llama 3.2 1B Prefill tests with different seq_len and batch_size
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq_128-batch_1-single_device-inference:
     status: EXPECTED_PASSING
-    markers: [push]
+    markers: [nightly]
 
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq_128-batch_2-single_device-inference:
     status: EXPECTED_PASSING
