--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -26,6 +26,7 @@ on:
           - 'model-test-weekly.json'
           - 'vllm-model-tests.json'
           - 'vllm-model-tests-nightly.json'
+          - 'vllm-model-tests-all.json'
           - 'Custom'
       test_suite_custom:
         description: 'Custom test suite json'
