--- a/.github/workflows/call-perf-test.yml
+++ b/.github/workflows/call-perf-test.yml
@@ -156,7 +156,7 @@ jobs:
         cd ${{ steps.strings.outputs.work-dir }}
         export PYTHONPATH="${{ steps.strings.outputs.work-dir }}:$PYTHONPATH"
 
-        pytest -svv ${{ matrix.build.pytest }} --output-file ${{ steps.strings.outputs.perf_report_json_file }}
+        pytest -svv --confcutdir=tests/benchmark ${{ matrix.build.pytest }} --output-file ${{ steps.strings.outputs.perf_report_json_file }}
 
     - name: Dump stablehlo to report
       id: dump-stablehlo
